--- a/addons/sourcemod/translations/surftimer.phrases.txt
+++ b/addons/sourcemod/translations/surftimer.phrases.txt
@@ -312,7 +312,30 @@
 		"#format"	"{1:s},{2:s},{3:s},{4:s},{5:s},{6:s},{7:s},{8:i},{9:i}"
 		"en"		"{1} {yellow}{2} {default}finished {orange}{3} {red}{4} {default}in {lightgreen}{5} {default}[SR {red}{6} {default}| PB {yellow}{7} {default}| Rank {lightgreen}{8}/{9}{default}]"
 	}
-	/*================END================*/
+	/*===================================
+	=    Prac WRCP Time Messages     	=
+	====================================*/
+	"PracWrcp1"
+	{
+		"#format"	"{1:s},{2:i},{3:s},{4:s},{5:s}"
+		"en"		"{1} Stage {2}:{default} {lightgreen}{3} {default}[{4}{default} | {5}{default}]"
+	}
+	"PracWrcp2"
+	{
+		"#format"	"{1:s},{2:s},{3:i},{4:s},{5:s},{6:s}"
+		"en"		"{1} {yellow}{2} {default}| {purple}Stage {3}:{default} {lightgreen}{4} {default}[{5}{default} | {6}{default}]"
+	}
+	"PracWrcp3"
+	{
+		"#format"	"{1:s},{2:i},{3:s},{4:s},{5:s},{6:i},{7:i}"
+		"en"		"{1} Completed {default}Stage {2} {red}{3} {default}in {lightgreen}{4} {5} {default}[Rank: {lightgreen}{6}/{7}{default}]"
+	}
+	"PracWrcp4"
+	{
+		"#format"	"{1:s},{2:i},{3:s},{4:s},{5:s},{6:i},{7:i}"
+		"en"		"{1} Completed {default}Stage {2} {red}{3} {default}in {lightgreen}{4} {5} {default}[Rank: {lightgreen}{6}/{7}{default}]"
+	}
+	/*============END============*/
 	"ReplayFinishingMsg"
 	{
 		"#format"	"{1:s},{2:s},{3:s}"
@@ -483,6 +506,11 @@
 		"#format"	"{1:s},{2:i}"
 		"en"		"{1} Error saving your {purple}stage {2} {default}time"
 	}
+	"ErrorPracWrcpTime"
+	{
+		"#format"	"{1:s},{2:i}"
+		"en"		"{1} {darkred}Error {default}saving your {purple}stage {2} {default}practice time"
+	}
 	"MSettings1"
 	{
 		"#format"	"{1:s}"
@@ -568,10 +596,20 @@
 		"#format"	"{1:s}"
 		"en"		"{1} There are no saved locations, use sm_saveloc to make one"
 	}
+	"Commands12"
+	{
+		"#format"	"{1:s}"
+		"en"		"{1} {red}There are no saved locations to remove"
+	}
 	"Commands13"
 	{
 		"#format"	"{1:s},{2:d}"
 		"en"		"{1} Set saveloc id to #{2}"
+	}
+	"Commands14"
+	{
+		"#format"	"{1:s}"
+		"en"		"{1} {green}Saved locations cleared"
 	}
 	"NoBonusOnMap"
 	{
